--- a/Filmtalk/src/index.css
+++ b/Filmtalk/src/index.css
@@ -102,6 +102,7 @@ code {
   margin-bottom: 60px;
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-top: 50px;
 }
 
@@ -132,12 +133,64 @@ code {
   height: 30px;
 }
 
+
+.card_rightside{
+  display: flex;
+  flex-direction: column;
+}
+
+.cardbox{
+  display: flex;
+  flex-direction: row;
+  
+  margin-top: 5px;
+  flex-wrap: wrap;
+}
+
 .movie_card{
   display: flex;
   flex-direction: row;
+  width: 350px;
+  height: 200px;
+  background-color: rgb(46, 44, 44);
+  color: white;
+  transition: border 0.3s ease;
+  border: 5px solid black;
+}
+.movie_card:hover{
+  border: 5px solid rgb(62, 176, 246);
+  cursor: pointer;
+}
+
+.card_img{
+  width: 150px;
+}
+
+.new_img{
+  width: 100%;
+  height: 150px;
+  margin-left: 5px;
+  margin-top: 5px;
 }
 
 .card_rightside{
   display: flex;
   flex-direction: column;
+  
+  align-items: center;
+}
+
+.card_title{
+  font-size: 20px;
+}
+
+.card_yearandgenre{
+  font-size: 14px;
+}
+
+.deets{
+  height: 100px;
+  width: 150px;
+  overflow: hidden;
+  font-size: 12px;
 }
