--- a/Filmtalk/src/index.css
+++ b/Filmtalk/src/index.css
@@ -194,3 +194,47 @@ code {
   overflow: hidden;
   font-size: 12px;
 }
+
+.comment-section{
+  display: flex;
+  flex-direction: column;
+  
+  height: fit-content;
+  margin-top: 20px;
+}
+.comment-box{
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  overflow:scroll;
+  margin-top: 10px;
+}
+
+.en-deets{
+  width: 100%;
+  margin-top: 20px;
+}
+
+.add-com{
+  display:flex;
+  flex-direction: row;
+}
+
+
+#en-hr{
+  width: 100%;
+  height: 2px;
+  background-color: white;
+}
+
+.en_card_rightside{
+  margin-top: 10px;
+}
+
+.en_card_yearandgenre{
+  text-align: center;
+}
+
+.en-content{
+  overflow:scroll
+}
