--- a/Filmtalk/src/index.css
+++ b/Filmtalk/src/index.css
@@ -42,7 +42,7 @@ code {
   font-size: 50px;
   border-color: rgb(62, 176, 246);
   border-style:groove;
-  color:rgb(62, 176, 246);
+  color:white;
   margin-left: 30px;
 }
 
@@ -57,7 +57,7 @@ code {
   font-size: 50px;
   border-color: rgb(62, 176, 246);
   border-style:groove;
-  color:rgb(27, 167, 255);
+  color: white;
 }
 
 .tag{
@@ -67,13 +67,97 @@ code {
 
 .intro{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: 70vw;
-  font-weight: bold;
+  width: 80vw;
+  height: 500px;
 }
+
+.intro_left{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.intro_right{
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.logout_butt{
+  background-color: rgb(62, 176, 246);
+  width: 100px;
+  border-radius: 5px;
+}
+
+.logout_butt:hover{
+  border: 1px solid white;
+  transition: 0.5ms ease-in;
+}
+
+.profsum_cont{
+  display: flex;
+  flex-direction: column;
+  width: 425px;
+  height: 215px;
+  border-radius: 15px;
+  background-color: rgb(62, 176, 246);
+  align-items: center;
+  justify-content: center;
+}
+
+.profsum{
+  display: flex;
+  flex-direction: row;
+  width: 420px;
+  height: 210px;
+  border-radius: 15px;
+  background-color:  rgb(46, 44, 44);
+  
+}
+
+.profsum_left{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.profsum_right{
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  text-align: left;
+}
+
+#pruh{
+  font-size: 25px;
+}
+
+.profsumico{
+  width:150px;
+  height: 150px;
+  background-color: white;
+  border-radius: 100px;
+}
+#ico2{
+  height: 150px;
+}
+
 
 
 
