--- a/Filmtalk/src/index.css
+++ b/Filmtalk/src/index.css
@@ -65,6 +65,24 @@ code {
   margin-top: 40px;
 }
 
+.navig_support{
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 50px;
+  background-color:rgb(80, 78, 78); 
+  margin-top: 0px;
+}
+
+.main_controls{
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 20px;
+}
+
 .intro{
   display: flex;
   flex-direction: row;
@@ -206,28 +224,32 @@ code {
 
 .moviebox{
   width: 100vw;
+  border-top: 10px groove rgb(8, 114, 181);;;
+  border-left: 10px groove rgb(8, 114, 181);;
+  border-right:10px groove rgb(8, 114, 181);;
+  border-bottom:10px groove rgb(8, 114, 181);;
   border-color: rgb(8, 114, 181);
   border-style: groove;
-  border-width: 10px;
+  
   background-color: black;
   height: 800px;
   margin-bottom: 60px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 50px;
+  margin-top: 0px;
 }
 
 .topbar{
   display: flex;
-  flex-direction: row;
-  border-bottom:rgb(62, 176, 246);
+  flex-direction: column;
+  
   border-style: groove;
   height: 80px;
   width: 100%;
-  justify-content: space-evenly;
   align-items: center;
-  font-size: 20px;
+  text-align: center;
+  font-size: 50px;
 }
 
 .filt_top{
@@ -250,7 +272,7 @@ code {
 }
 
 #addrec{
-  width: 100px;
+  width: 130px;
   height: 30px;
 }
 
