--- a/Filmtalk/src/index.css
+++ b/Filmtalk/src/index.css
@@ -489,7 +489,7 @@ code {
 .comment-section{
   display: flex;
   flex-direction: column;
-  
+  width: 80%;
   height: fit-content;
   margin-top: 20px;
 }
@@ -499,6 +499,7 @@ code {
   max-height: 300px;
   overflow-y:scroll;
   margin-top: 10px;
+  width:100%;
 }
 
 .whole_comment{
@@ -682,3 +683,4 @@ code {
   background-color: black;
   height: 30px;
 }
+
